Dockerfile and docker compose working.

--- a/rest-api/src/main/resources/application.yaml
+++ b/rest-api/src/main/resources/application.yaml
@@ -1,3 +1,9 @@
 spring:
   application:
     name: rest-api
+
+  datasource:
+    driver-class-name: org.postgresql.Driver
+    url: jdbc:postgresql://database:5432/database
+    username: postgres
+    password: secret
